/*
 * ConstantPredicate.java
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2022 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.apple.foundationdb.record.query.plan.cascades.predicates;

import com.apple.foundationdb.annotation.API;
import com.apple.foundationdb.record.EvaluationContext;
import com.apple.foundationdb.record.ObjectPlanHash;
import com.apple.foundationdb.record.PlanHashable;
import com.apple.foundationdb.record.RecordCoreException;
import com.apple.foundationdb.record.RecordMetaDataProto;
import com.apple.foundationdb.record.provider.foundationdb.FDBRecordStoreBase;
import com.apple.foundationdb.record.query.plan.cascades.AliasMap;
import com.apple.foundationdb.record.query.plan.cascades.CorrelationIdentifier;
import com.apple.foundationdb.record.query.plan.cascades.TranslationMap;
import com.apple.foundationdb.record.query.plan.cascades.typing.Type;
import com.apple.foundationdb.record.query.plan.cascades.values.Value;
import com.google.common.base.Verify;
import com.google.protobuf.Message;

import javax.annotation.Nonnull;
import javax.annotation.Nullable;
import java.util.Collections;
import java.util.Objects;
import java.util.Set;

/**
 * A predicate with a constant boolean value.
 */
@API(API.Status.EXPERIMENTAL)
public class ConstantPredicate implements LeafQueryPredicate, QueryPredicate.Serializable {
    private static final ObjectPlanHash BASE_HASH = new ObjectPlanHash("Constant-Predicate");

    @Nonnull
    public static final ConstantPredicate TRUE = new ConstantPredicate(true);
    @Nonnull
    public static final ConstantPredicate FALSE = new ConstantPredicate(false);
    @Nonnull
    public static final ConstantPredicate NULL = new ConstantPredicate(null);

    @Nullable
    private final Boolean value;

    public ConstantPredicate(@Nullable Boolean value) {
        this.value = value;
    }

    @Override
    public boolean isTautology() {
        return value != null && value;
    }

    @Nullable
    @Override
    public <M extends Message> Boolean eval(@Nonnull final FDBRecordStoreBase<M> store, @Nonnull final EvaluationContext context) {
        return value;
    }

    @Nonnull
    @Override
    public Set<CorrelationIdentifier> getCorrelatedTo() {
        return Collections.emptySet();
    }

    @Nonnull
    @Override
    public QueryPredicate translateLeafPredicate(@Nonnull final TranslationMap translationMap) {
        return this;
    }

    @Override
    public boolean equalsWithoutChildren(@Nonnull final QueryPredicate other, @Nonnull final AliasMap equivalenceMap) {
        if (!LeafQueryPredicate.super.equalsWithoutChildren(other, equivalenceMap)) {
            return false;
        }
        final ConstantPredicate that = (ConstantPredicate)other;
        return Objects.equals(value, that.value);
    }

    @Override
    public int semanticHashCode() {
        return Objects.hash(value);
    }

    @Override
    public int planHash() {
        return value == null ? 2 : (value ? 0 : 1);
    }

    @Override
    public int planHash(@Nonnull final PlanHashKind hashKind) {
        switch (hashKind) {
            case LEGACY:
            case FOR_CONTINUATION:
                return PlanHashable.objectsPlanHash(hashKind, BASE_HASH, value);
            case STRUCTURAL_WITHOUT_LITERALS:
                return PlanHashable.planHash(hashKind, BASE_HASH);
            default:
                throw new UnsupportedOperationException("Hash kind " + hashKind.name() + " is not supported");
        }
    }

    @Override
    public String toString() {
        return String.valueOf(value);
    }

    @Override
    public boolean isSerializable() {
        return true;
    }

    @Nonnull
    @Override
    public RecordMetaDataProto.Predicate toProto() {
        RecordMetaDataProto.ConstantPredicate.ConstantValue constantValue = RecordMetaDataProto.ConstantPredicate.ConstantValue.NULL;
        if (value != null) {
            if (value) {
                constantValue = RecordMetaDataProto.ConstantPredicate.ConstantValue.TRUE;
            } else {
                constantValue = RecordMetaDataProto.ConstantPredicate.ConstantValue.FALSE;
            }
        }
        return RecordMetaDataProto.Predicate.newBuilder()
                .setConstantPredicate(RecordMetaDataProto.ConstantPredicate.newBuilder()
                        .setValue(constantValue)
                        .build())
                .build();
    }

    @Nonnull
    public static ConstantPredicate deserialize(@Nonnull final RecordMetaDataProto.ConstantPredicate proto,
                                           @Nonnull final CorrelationIdentifier alias,
                                           @Nonnull final Type inputType) {
        Verify.verify(proto.hasValue(), String.format("attempt to deserialize %s without value", ConstantPredicate.class));
        switch (proto.getValue()) {
            case NULL:
                return NULL;
            case TRUE:
                return TRUE;
            case FALSE:
                return FALSE;
            default:
                throw new RecordCoreException(String.format("attempt to deserialize unknown value '%s'", proto.getValue()));
        }
    }
}
